--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -3,28 +3,31 @@
 
 <head>
   <title>
-    <%= title %>
+    Inicio
   </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <script src="javascripts/socket.io.js" type="module"></script>
-  <script src="javascripts/script.js" type="module"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="/javascripts/socket.io.js" type="module"></script>
+  <script src="/javascripts/index.js" type="module"></script>
 </head>
 
-<body>
-  <h1>
-    <%= title %>
-  </h1>
-  <p>Welcome to <%= title %>
-  </p>
-
-  <div >
-    <span id="token">---Your Token---</span>
+<body class="">
+  <h2 class="text-center pb-2">
+    GENERADOR DE TOKEN VIRTUAL
+  </h2>
+  <div class="text-center pb-3">
+    <label for="user">Usuario: </label>
+    <input type="text" name="user" id="user" required>
   </div>
-
-  <div id="clock">
-    <span id="seconds">20</span>
+  <div class="text-center">
+    <button class="btn btn-primary" id="generate" type="submit">Generar Token</button>
   </div>
-
+  <div class="text-center">
+    <h5 class="text-center pt-5" id="message" style="display: none;">
+      Por favor, ingresar el usuario.
+    </h5>
+  </div>
 </body>
 
 
